src/objects/ProductSchedule__c.object
<CustomObject>
    <description>SFDC1-2043 Object to hold multi-year product information</description>
    <fields>
        <fullName>InstallmentYear__c</fullName>
        <description>SFDC1-2043 the year for which this Product schedule is valid</description>
        <inlineHelpText>Year for which this Product Schedule is applicable</inlineHelpText>
        <label>Installment Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2043 mark whether the product schedule is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>SFDC1-2043 list price for the product</description>
        <inlineHelpText>List Price for the product schedule</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PKIDProdSchd__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>PdS{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ProdSchd</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PricingYear__c</fullName>
        <description>SFDC1-2043 Pricing year of the product schedule</description>
        <label>Pricing Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductTerm__c</fullName>
        <description>SFDC1-2043 The term for which related Product can be scheduled</description>
        <inlineHelpText>Tenure of product schedule</inlineHelpText>
        <label>Product Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2043 Product for which product schedule is created</description>
        <inlineHelpText>Related Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Schedules</relationshipLabel>
        <relationshipName>ProductSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>SFDC1-2043 current running year of the Product schedule</description>
        <formula>&quot;Year &quot; + TEXT(VALUE(InstallmentYear__c) - VALUE( PricingYear__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Year</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Product Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>reeder_view</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Year__c</columns>
        <columns>ListPrice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>AWS/Collection NonDRM Act/Media</value>
        </filters>
        <label>reeder view</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Product Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>